@@ -36,6 +36,7 @@ with system,
     spar_os.exec,
     pegasock.memcache,
     world,
+    reports.test,
     string_util,
     user_io,
     script_io,
@@ -62,6 +63,8 @@ use ada.text_io,
     user_io,
     script_io,
     world,
+    reports,
+    reports.test,
     string_util,
     compiler,
     scanner,
