@@ -1,0 +1,11 @@
+procedure main is
+
+procedure some_p( i : abstract integer) is -- abstract in type
+begin
+  null;
+end some_p;
+
+begin
+null;
+end main;
+
