@@ -1,0 +1,5 @@
+type array_type is array(1..5) of integer;
+i : integer;
+a : array_type;
+i := a("1");
+
